Fixing selected email header z-index

--- a/web-ui/app/scss/styles.scss
+++ b/web-ui/app/scss/styles.scss
@@ -148,6 +148,7 @@
       }
       &.selected {
         background: #FFF;
+        z-index: 3;
         a {
           color: #333;
         }
